--- a/Demo1_ASP_MVC/Views/Home/Index.cshtml
+++ b/Demo1_ASP_MVC/Views/Home/Index.cshtml
@@ -5,6 +5,22 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-  <h1 class="display-4">Bienvenue @_sessionManager.FirstName</h1>
+<div class="container">
+    @if (_sessionManager.IsValid())
+    {
+    <div class="text-center m-5">
+        <h1 class="display-4">Bienvenue @_sessionManager.FirstName @_sessionManager.LastName</h1>
+        <h2 class="display-4"> né le @_sessionManager.Birtdate</h2>
+        <h2 class="display-4"> votre email est @_sessionManager.Email</h2>
+    </div>
+
+    }else{
+        <div class="text-center m-5">
+            <h1 class="display-4"><a class="btn btn-primary"  asp-controller="Login" asp-action="Login">Connectez-vous</a></h1>
+            <h1 class="display-4"><a class="btn btn-primary" asp-controller="user" asp-action="Register">Enregistrez-vous</a></h1>
+        </div>
+    }
 </div>
+
+
+
